# pm-MVP

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: AGENTS.md  ai.py  auth.py  database.py  main.py  pyproject.toml
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_board.py  test_main.py
docs/: DATABASE.md  PLAN.md  SCHEMA.md
frontend/: AGENTS.md  playwright.config.ts  vitest.config.ts
frontend/src/components/: AISidebar.test.tsx  AISidebar.tsx  App.test.tsx  App.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginPage.test.tsx  LoginPage.tsx  NewCardForm.tsx
frontend/src/lib/: api.ts
frontend/tests/: auth.spec.ts  kanban.spec.ts
scripts/: start.bat  start.sh
