[project]
name = "kanban-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "itsdangerous>=2.2",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "httpx2>=0.28",
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*"]
